--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.h2.console.settings.web-allow-others=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=sa@123
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
